--- a/projects/projects.json
+++ b/projects/projects.json
@@ -1997,8 +1997,8 @@
       "name": "Octopus Deploy",
       "thumb": "octopusdeploy/thumb.png",
       "desc": "Octopus Deploy is a friendly deployment automation system for .NET developers.",
-      "url": "http://octopusdeploy.com",
-      "info": "http://octopusdeploy.com/tour",
+      "url": "https://demo.octopusdeploy.com",
+      "info": "http://octopusdeploy.com",
       "submitter": "paulstovell",
       "submissionDate": "2014-04-08",
       "tags": [
